Adding message to footer in App.vue

--- a/public/static/datenschutz.html
+++ b/public/static/datenschutz.html
@@ -461,7 +461,9 @@
         https://www.google.de/intl/de/policies/privacy.
       </a>
     </p>
-    <h3>Hinweise zur Datenverarbeitung im Zusammenhang mit Google Analytics</h3>
+    <h3 style="color: #6a1cc3">
+      Hinweise zur Datenverarbeitung im Zusammenhang mit Google Analytics
+    </h3>
     <p>
       Diese Website benutzt Google Analytics, einen Webanalysedienst der Google
       Ireland Limited. Wenn der Verantwortliche für die Datenverarbeitung auf
@@ -522,7 +524,7 @@
         (https://adssettings.google.com/authenticated).
       </a>
     </p>
-    <h3>reCAPTCHA</h3>
+    <h3 style="color: #6a1cc3">reCAPTCHA</h3>
     <p>
       Zum Schutz Ihrer Anfragen per Internetformular verwenden wir den Dienst
       reCAPTCHA des Unternehmens Google LLC (Google). Die Abfrage dient der
